--- a/app/src/main/res/layout/activity_calories.xml
+++ b/app/src/main/res/layout/activity_calories.xml
@@ -62,7 +62,7 @@
         android:id="@+id/caloriesconstlayout"
         android:layout_width="220dp"
         android:layout_height="224dp"
-        android:layout_marginTop="168dp"
+        android:layout_marginTop="140dp"
         android:background="@drawable/roundshape"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -358,44 +358,42 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="200dp"
-                android:layout_marginEnd="116dp"
+                android:layout_marginStart="12dp"
+                android:layout_marginTop="8dp"
                 android:text="2 apples in a day"
                 android:textColor="@color/grayTextColor"
                 android:textSize="12sp"
-                app:layout_constraintEnd_toStartOf="@+id/textView50"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                tools:layout_marginLeft="84dp"
-                tools:layout_marginTop="213dp">
+                app:layout_constraintStart_toEndOf="@+id/constraintLayout5"
+                app:layout_constraintTop_toBottomOf="@+id/textView27">
 
             </TextView>
 
             <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+                android:id="@+id/textView27"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="88dp"
+                android:layout_marginTop="20dp"
+                android:text="Apple"
+                android:textSize="15sp"
+                android:textStyle="bold"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/textView19"></TextView>
 
-            android:text="Apple"
-            android:textSize="15sp"
-            android:textStyle="bold"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:layout_marginLeft="84dp"
-            tools:layout_marginTop="188dp"></TextView>
+            <TextView
+                android:id="@+id/textView19"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="20dp"
+                android:layout_marginTop="20dp"
+                android:text="Today"
+                android:textColor="@color/grayTextColor"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/textView29">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Today"
-            android:textColor="@color/grayTextColor"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:layout_marginLeft="25dp"
-            tools:layout_marginTop="152dp">
+            </TextView>
 
-        </TextView>
-
-        <TextView
+            <TextView
             android:id="@+id/proteintext"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
